--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "requrejs-sandbox",
 	"description": "Module for requre.js to create sandbox enviroment to run dedicated apps",
-	"version": "0.1.4-22",
+	"version": "0.1.4-23",
 	"author": "Anton Ignatov",
 	"url": "https://github.com/a-ignatov-parc/requirejs-sandbox",
 	"main": "./src/requirejs-sandbox.js",
@@ -34,6 +34,7 @@
 		"grunt-bumpup": "*"
 	},
 	"srcPath": "src/",
+	"testPath": "tests/",
 	"buildPath": "build/",
 	"cssPath": "static/styles/css/",
 	"stylusPath": "static/styles/stylus/"
