--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "requrejs-sandbox",
 	"description": "Module for requre.js to create sandbox enviroment to run dedicated apps",
-	"version": "0.1.4-93",
+	"version": "0.1.4-96",
 	"author": "Anton Ignatov",
 	"url": "https://github.com/a-ignatov-parc/requirejs-sandbox",
 	"main": "./src/requirejs-sandbox.js",
@@ -24,14 +24,14 @@
 	},
 	"dependencies": {},
 	"devDependencies": {
-		"grunt": ">=0.4",
-		"grunt-contrib-concat": ">=0.1",
-		"grunt-contrib-jshint": ">=0.1",
-		"grunt-contrib-uglify": ">=0.1",
-		"grunt-contrib-watch": ">=0.2",
-		"grunt-contrib-qunit": ">=0.1",
-		"grunt-contrib-stylus": ">=0.5",
-		"grunt-bumpup": "*"
+		"grunt": "0.4.x",
+		"grunt-contrib-concat": "0.3.x",
+		"grunt-contrib-jshint": "0.6.x",
+		"grunt-contrib-uglify": "0.2.x",
+		"grunt-contrib-watch": "0.5.x",
+		"grunt-contrib-qunit": "0.2.x",
+		"grunt-contrib-stylus": "0.7.x",
+		"grunt-bumpup": "0.2.x"
 	},
 	"srcPath": "src/",
 	"testPath": "tests/",
