--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,6 @@ before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - "phantomjs test/phantomjs-index.js"
+branches:
+  only:
+    - master
