--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,4 @@
-language: node_js
-node_js:
-  - 0.8
-before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - "phantomjs test/phantomjs-index.js"
+script: phantomjs testrunner.js
 branches:
   only:
     - master
