--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
-script: phantomjs test/phantomjs-index.js
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
 branches:
   only:
     - master
