--- a/package.json
+++ b/package.json
@@ -28,12 +28,11 @@
 		"url": "https://github.com/a-ignatov-parc/requirejs-sandbox.git"
 	},
 	"scripts": {
-		"test": "grunt tests",
+		"test": "grunt tests --verbose",
 		"build": "grunt compile"
 	},
 	"dependencies": {},
 	"devDependencies": {
-		"phantomjs": "*"
 		"grunt": "0.4.x",
 		"grunt-contrib-concat": "0.3.x",
 		"grunt-contrib-jshint": "0.6.x",
