--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 	"dependencies": {},
 	"devDependencies": {
 		"grunt": "0.4.x",
+		"burrito": "0.2.x",
 		"grunt-cli": "0.1.x",
 		"grunt-contrib-concat": "0.3.x",
 		"grunt-contrib-jshint": "0.6.x",
