--- a/src/.jshintrc
+++ b/src/.jshintrc
@@ -15,6 +15,7 @@
 	"quotmark": "single",
 	"scripturl": true,
 	"-W030": false,
+	"-W015": false,
 	"globals": {
 		"module": true,
 		"define": true,
