--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
 	"main": "build/requirejs-sandbox.min.js",
 	"main-debug": "build/requirejs-sandbox.js",
 	"scripts": {
-		"install": ["npm install", "grunt compile"]
+		"install": ["npm install", "grunt bower"]
 	},
 	"dependencies": {
 		"jquery": "~2.0.0",
