dependencies separated to devDependencies and dependencies

--- a/bower.json
+++ b/bower.json
@@ -2,12 +2,17 @@
 	"name": "requrejs-sandbox",
 	"main": "build/requirejs-sandbox.min.js",
 	"main-debug": "build/requirejs-sandbox.js",
+	"scripts": {
+		"install": ["npm install", "grunt bower"]
+	},
 	"dependencies": {
 		"jquery": "~2.0.0",
+		"requirejs": "~2.1.5"
+	},
+	"devDependencies": {
 		"angular": "~1.2.8",
 		"backbone": "~1.1.0",
 		"bootstrap": "~3.1.0",
-		"requirejs": "~2.1.5",
 		"underscore": "~1.5.0",
 		"requirejs-text": "~2.0.5",
 		"todomvc-common": "~0.1.4",
