--- a/bower.json
+++ b/bower.json
@@ -2,15 +2,14 @@
 	"name": "requirejs-sandbox",
 	"main": "build/requirejs-sandbox.min.js",
 	"main-debug": "build/requirejs-sandbox.js",
-	"dependencies": {
-		"requirejs": "~2.1.5"
-	},
 	"devDependencies": {
 		"qunit": "~1.14.0",
 		"jquery": "~2.0.0",
+		"almond": "~0.2.9",
 		"angular": "~1.2.8",
 		"backbone": "~1.1.0",
 		"bootstrap": "~3.1.0",
+		"requirejs": "~2.1.5",
 		"underscore": "~1.5.0",
 		"requirejs-text": "~2.0.5",
 		"todomvc-common": "~0.1.4",
