--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "requirejs-sandbox",
 	"description": "Sandbox manager for require.js allows user to run multiple apps without scope intersection issues",
-	"version": "0.5.0-8",
+	"version": "0.5.1-3",
 	"author": {
 		"name": "Anton Ignatov",
 		"web": "https://github.com/a-ignatov-parc"
@@ -32,20 +32,19 @@
 		"build": "grunt compile",
 		"install": "bower install"
 	},
-	"dependencies": {
-		"grunt-banner": "~0.2.0",
-		"grunt-contrib-uglify": "~0.4.0",
-		"grunt-contrib-requirejs": "~0.4.0"
-	},
 	"devDependencies": {
 		"grunt": "~0.4.0",
 		"bower": "~1.3.0",
 		"grunt-cli": "~0.1.0",
+		"underscore": "~1.6.0",
 		"grunt-bumpup": "~0.5.0",
-		"grunt-contrib-jshint": "~0.10.0",
+		"grunt-banner": "~0.2.0",
 		"grunt-contrib-watch": "~0.6.1",
 		"grunt-contrib-qunit": "~0.4.0",
-		"grunt-contrib-stylus": "~0.14.0"
+		"grunt-contrib-uglify": "~0.4.0",
+		"grunt-contrib-stylus": "~0.14.0",
+		"grunt-contrib-jshint": "~0.10.0",
+		"grunt-contrib-requirejs": "~0.4.0"
 	},
 	"config": {
 		"srcDir": "src",
@@ -54,6 +53,7 @@
 		"pluginsDir": "plugins",
 		"patchesDir": "patches",
 		"cssDir": "static/styles/css",
-		"stylusDir": "static/styles/stylus"
+		"stylusDir": "static/styles/stylus",
+		"packagesDir": "bower_components"
 	}
 }
